--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "v1",
+    "@heroicons/vue": "^2.0.18",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
