--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "v1",
     "@heroicons/vue": "^2.0.18",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
